# project-bees-knees

./: .gitignore  404.html  BMAR_Cross_Correlation.py  CODE_REVIEW_REPORT.md  FINAL_CLEANUP_REPORT.md  README.md  analyze_modules.py  cleanup_summary.md  count_lines.py  find_duplicates.py  index.html  mkdocs.yml  project-bees-knees - Shortcut.lnk  project-bees-knees.code-workspace  requirements.txt  sitemap.xml  system_requirements.txt
.specstory/history/: 2025-07-09_20-53Z-beehive-acoustic-monitoring-system-architecture-overview.md  2025-07-18_07-55Z-can-you-now-read-the-complete-project-files-in-bot.md  2025-07-18_07-55Z-can-you-now-read-the-complete-project-files-in-both-src-and-src-modules.md  2025-07-18_08-21Z-do-you-have-access-to-all-of-the-python-files-in-s.md  2025-07-20_18-32Z-there-are-double-vu-meter-lines-but-there-should-b.md  2025-08-10_21-46Z-adding-logging-toggle-via-command-line-flag.md  2025-08-11_01-39Z-fixing-new-errors-in-python-script.md
Julia/: Julia_BMARwt.jl
MatLab/: Readme  a_FFT_analysis_01.m  a_FFT_analysis_02.m  a_FFT_analysis_02.mlx
_[archive]/: A4_BeeMicBox--20230619.gcode  bandsplitting.py  bandsplitting_2.py  bandsplitting_3.py  bandsplitting_4.py  bandsplitting_5.py  bandsplitting_scipy.py  bandsplitting_scipy_2.py
acoustic_sensor_recording/: Beehive_Multimodal_Acoustic_Recording.py  Beehive_Multimodal_Acoustic_Recording_x.py
beehub/rust/project_bees_knees/: Cargo.toml
beehub/rust/project_bees_knees/src/: BMAR_Cross_Correlation.rs  main.rs
docs/: index.md
license/: index.html
search/: search_index.json
(+703 files in other folders)
