[package]
name = "project_bees_knees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"  # Use the latest version compatible with your needs
ndarray = "0.15.3"  # Use the latest version compatible with your needs
